--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -28,7 +29,7 @@
     "react-router-dom": "^6.16.0"
   },
   "scripts": {
-    "start": "PORT=3500 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
