--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,68 @@
 -i https://pypi.org/simple
-alembic==1.8.1
+alembic==1.12.0; python_version >= '3.7'
 aniso8601==9.0.1
+argparse==1.4.0
+asttokens==2.4.0
+backcall==0.2.0
 bcrypt==4.0.1; python_version >= '3.6'
+certifi==2023.7.22; python_version >= '3.6'
+charset-normalizer==3.3.0; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
+colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
+cors==1.0.1
+decorator==5.1.1; python_version > '3.6' and python_version < '3.11'
+executing==2.0.0
+faker==15.3.2
+filelock==3.12.4; python_version >= '3.8'
 flask==2.2.2
 flask-bcrypt==1.0.1
-flask-cors==3.0.10
-flask-migrate==3.1.0
-flask-restful==0.3.10
+flask-marshmallow==0.15.0
+flask-migrate==4.0.0
+flask-restful==0.3.9
 flask-sqlalchemy==3.0.2
-greenlet==2.0.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
+future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
+gevent==23.9.1; python_version >= '3.8'
+greenlet==3.0.0; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 gunicorn==21.2.0
+idna==3.4; python_version >= '3.5'
+importlib-metadata==6.8.0; python_version < '3.10'
+importlib-resources==6.1.0; python_version < '3.9'
+ipdb==0.13.13
+ipython==8.12.3; python_version > '3.6' and python_version < '3.11'
 itsdangerous==2.1.2; python_version >= '3.7'
+jedi==0.19.1; python_version >= '3.6'
 jinja2==3.1.2; python_version >= '3.7'
 mako==1.2.4; python_version >= '3.7'
 markupsafe==2.1.3; python_version >= '3.7'
-packaging==23.1; python_version >= '3.7'
-psycopg2-binary==2.9.8
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==1.0.0
+marshmallow==3.20.1; python_version >= '3.8'
+marshmallow-sqlalchemy==0.29.0
+matplotlib-inline==0.1.6; python_version >= '3.5'
+packaging==23.2; python_version >= '3.7'
+parso==0.8.3; python_version >= '3.6'
+pexpect==4.8.0; sys_platform != 'win32'
+pickleshare==0.7.5
+prompt-toolkit==3.0.39; python_full_version >= '3.7.0'
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pygments==2.16.1; python_version >= '3.7'
+pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 pytz==2023.3.post1
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.42
+requests==2.31.0; python_version >= '3.7'
+requests-file==1.5.1
+setuptools==68.2.2; python_version >= '3.8'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+sqlalchemy==2.0.21
 sqlalchemy-serializer==1.4.1
-typing-extensions==4.8.0; python_version < '3.9'
-werkzeug==2.3.7; python_version >= '3.8'
+stack-data==0.6.3
+tldextract==3.6.0; python_version >= '3.7'
+tomli==2.0.1; python_version > '3.6' and python_version < '3.11'
+traitlets==5.11.2; python_version >= '3.8'
+typing-extensions==4.8.0; python_version >= '3.8'
+urllib3==2.0.6; python_version >= '3.7'
+wcwidth==0.2.8
+werkzeug==2.2.2
 zipp==3.17.0; python_version >= '3.8'
+zope.event==5.0; python_version >= '3.7'
+zope.interface==6.1; python_version >= '3.7'
