--- a/Pipfile
+++ b/Pipfile
@@ -15,10 +15,10 @@ sqlalchemy = "*"
 flask-bcrypt = "==1.0.1"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
-cors = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
 werkzeug = "==2.2.2"
+flask-cors = "*"
 
 [dev-packages]
 
