--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,19 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.15.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.1",
+    "@uidotdev/usehooks": "^2.4.0",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -21,6 +28,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "stripe": "^14.8.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.1"
   },
@@ -35,7 +43,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build", 
+    "build": "CI=false && react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
